--- a/index.html
+++ b/index.html
@@ -779,11 +779,9 @@
         <div class="col-lg-4 col-md-12 footer-newsletter">
           <h4>Kunjungi situs tesmi</h4>
           <p>Ikuti Kami</p>
-          <form action="forms/newsletter.php" method="post" class="php-email-form">
+          <form  class="php-email-form">
             <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your subscription request has been sent. Thank you!</div>
+           
           </form>
         </div>
 
